src/c_parser.output
Nonterminals useless in grammar

   conditional_expression
   expression


Terminals unused in grammar

   AUTO
   DOUBLE
   STRUCT
   BREAK
   LONG
   SWITCH
   CASE
   ENUM
   REGISTER
   TYPEDEF
   CHAR
   EXTERN
   UNION
   CONST
   FLOAT
   SHORT
   UNSIGNED
   CONTINUE
   SIGNED
   VOID
   DEFAULT
   GOTO
   VOLATILE
   DO
   STATIC
   LSQUARE
   RSQUARE
   THREE_DOTS
   DOT
   PTR_OP
   PLUS_PLUS
   MINUS_MINUS
   SIZEOF
   Q_MARK
   COLON
   HASH
   HASH_HASH
   WAVE
   EXL_MARK
   STRING_LITERAL
   PREPROCESSOR_INCLUDE
   EOLINE


Rules useless in grammar

  103 conditional_expression: equality_expression Q_MARK arithmetic_expression COLON arithmetic_expression

  104 expression: equality_expression
  105           | assignment_expression


Rules useless in parser due to conflicts

   20 equality_expression: IDENTIFIER

   45 arithmetic_expression: IDENTIFIER

   84 else_statement: ELSE if_statement


State 39 conflicts: 21 reduce/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 66 conflicts: 10 shift/reduce
State 81 conflicts: 1 shift/reduce
State 90 conflicts: 20 reduce/reduce
State 91 conflicts: 8 shift/reduce
State 100 conflicts: 1 shift/reduce
State 107 conflicts: 9 shift/reduce, 1 reduce/reduce
State 109 conflicts: 1 shift/reduce, 1 reduce/reduce
State 128 conflicts: 1 shift/reduce, 9 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: fn_declaration
    2        | declaration
    3        | program fn_declaration
    4        | program declaration

    5 CONSTANT: FLOATING_CONST
    6         | INTEGER_CONST
    7         | CHAR_CONST

    8 declaration: INT initialization_list SEMI_COLON

    9 initialization_list: bracketed_identifier
   10                    | assignment_expression
   11                    | initialization_list COMMA assignment_expression
   12                    | initialization_list COMMA bracketed_identifier

   13 bracketed_identifier: IDENTIFIER
   14                     | LBRACKET bracketed_identifier RBRACKET

   15 assignment_expression_list: assignment_expression
   16                           | assignment_expression_list COMMA assignment_expression

   17 equality_expression: bracketed_identifier COMPARISON_OPERATOR bracketed_identifier
   18                    | bracketed_const
   19                    | bracketed_identifier
   20                    | IDENTIFIER
   21                    | arithmetic_expression COMPARISON_OPERATOR arithmetic_expression
   22                    | LBRACKET equality_expression RBRACKET

   23 bracketed_const: CONSTANT
   24                | LBRACKET bracketed_const RBRACKET

   25 COMPARISON_OPERATOR: LOGICAL_EQUALITY
   26                    | LOGICAL_INEQUALITY
   27                    | LOGICAL_AND
   28                    | LOGICAL_OR
   29                    | LOGICAL_MORE
   30                    | LOGICAL_LESS
   31                    | LESS_OR_EQUAL
   32                    | MORE_OR_EQUAL

   33 assignment_expression: bracketed_identifier ASSIGNMENT_OPERATOR arithmetic_expression

   34 ASSIGNMENT_OPERATOR: EQUALS
   35                    | MULT_EQUALS
   36                    | DIV_EQUALS
   37                    | PERCENT_EQUALS
   38                    | PLUS_EQUALS
   39                    | MINUS_EQUALS
   40                    | LSHIFT_EQUALS
   41                    | RSHIFT_EQUALS
   42                    | AND_EQUALS
   43                    | XOR_EQUALS
   44                    | OR_EQUALS

   45 arithmetic_expression: IDENTIFIER
   46                      | bracketed_identifier
   47                      | bracketed_const
   48                      | arithmetic_expression ARITHMETIC_OPERATOR arithmetic_expression
   49                      | LBRACKET arithmetic_expression RBRACKET

   50 ARITHMETIC_OPERATOR: BITWISE_XOR
   51                    | BITWISE_OR
   52                    | BITWISE_AND
   53                    | MULT
   54                    | PLUS
   55                    | MINUS
   56                    | DIV
   57                    | PERCENT
   58                    | LSHIFT
   59                    | RSHIFT

   60 fn_declaration: INT IDENTIFIER LBRACKET fn_params_list RBRACKET compound_statement

   61 fn_params_list: INT bracketed_identifier
   62               | fn_params_list COMMA INT bracketed_identifier
   63               | %empty

   64 loop: for_loop
   65     | while_loop

   66 for_loop: FOR LBRACKET for_loop_decl_statement RBRACKET compound_statement
   67         | FOR LBRACKET for_loop_decl_statement RBRACKET statement

   68 for_loop_decl_statement: assignment_expression_list SEMI_COLON equality_expression SEMI_COLON assignment_expression_list
   69                        | assignment_expression_list SEMI_COLON equality_expression SEMI_COLON
   70                        | assignment_expression_list SEMI_COLON SEMI_COLON assignment_expression_list
   71                        | SEMI_COLON equality_expression SEMI_COLON assignment_expression_list
   72                        | assignment_expression_list SEMI_COLON SEMI_COLON
   73                        | SEMI_COLON SEMI_COLON assignment_expression_list
   74                        | SEMI_COLON equality_expression SEMI_COLON
   75                        | SEMI_COLON SEMI_COLON

   76 while_loop: WHILE LBRACKET equality_expression RBRACKET compound_statement
   77           | WHILE LBRACKET equality_expression RBRACKET statement

   78 if_block_statement: if_statement
   79                   | if_statement else_statement_list

   80 else_statement_list: else_statement
   81                    | else_statement_list else_statement

   82 if_statement: IF LBRACKET equality_expression RBRACKET compound_statement
   83             | IF LBRACKET equality_expression RBRACKET statement

   84 else_statement: ELSE if_statement
   85               | ELSE compound_statement
   86               | ELSE statement

   87 compound_statement: LCURLY declaration_list statement_list RCURLY
   88                   | LCURLY statement_list RCURLY
   89                   | LCURLY declaration_list RCURLY
   90                   | LCURLY RCURLY

   91 declaration_list: declaration
   92                 | declaration_list declaration

   93 statement_list: statement
   94               | statement_list statement

   95 statement: loop
   96          | if_block_statement
   97          | semi_colon_statement

   98 semi_colon_statement: return_statement
   99                     | assignment_expression SEMI_COLON
  100                     | SEMI_COLON

  101 return_statement: RETURN equality_expression SEMI_COLON
  102                 | RETURN SEMI_COLON


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258)
DOUBLE (259)
INT (260) 8 60 61 62
STRUCT (261)
BREAK (262)
ELSE (263) 84 85 86
LONG (264)
SWITCH (265)
CASE (266)
ENUM (267)
REGISTER (268)
TYPEDEF (269)
CHAR (270)
EXTERN (271)
RETURN (272) 101 102
UNION (273)
CONST (274)
FLOAT (275)
SHORT (276)
UNSIGNED (277)
CONTINUE (278)
FOR (279) 66 67
SIGNED (280)
VOID (281)
DEFAULT (282)
GOTO (283)
VOLATILE (284)
DO (285)
IF (286) 82 83
STATIC (287)
WHILE (288) 76 77
LSQUARE (289)
RSQUARE (290)
LBRACKET (291) 14 22 24 49 60 66 67 76 77 82 83
RBRACKET (292) 14 22 24 49 60 66 67 76 77 82 83
LCURLY (293) 87 88 89 90
RCURLY (294) 87 88 89 90
THREE_DOTS (295)
DOT (296)
PTR_OP (297)
PLUS_PLUS (298)
MINUS_MINUS (299)
SIZEOF (300)
LSHIFT (301) 58
RSHIFT (302) 59
LESS_OR_EQUAL (303) 31
MORE_OR_EQUAL (304) 32
LOGICAL_EQUALITY (305) 25
LOGICAL_INEQUALITY (306) 26
LOGICAL_AND (307) 27
LOGICAL_OR (308) 28
Q_MARK (309)
COLON (310)
MULT_EQUALS (311) 35
DIV_EQUALS (312) 36
PERCENT_EQUALS (313) 37
PLUS_EQUALS (314) 38
MINUS_EQUALS (315) 39
LSHIFT_EQUALS (316) 40
RSHIFT_EQUALS (317) 41
AND_EQUALS (318) 42
XOR_EQUALS (319) 43
OR_EQUALS (320) 44
COMMA (321) 11 12 16 62
HASH (322)
HASH_HASH (323)
SEMI_COLON (324) 8 68 69 70 71 72 73 74 75 99 100 101 102
EQUALS (325) 34
BITWISE_OR (326) 51
BITWISE_AND (327) 52
BITWISE_XOR (328) 50
MULT (329) 53
PLUS (330) 54
MINUS (331) 55
WAVE (332)
EXL_MARK (333)
DIV (334) 56
PERCENT (335) 57
LOGICAL_MORE (336) 29
LOGICAL_LESS (337) 30
FLOATING_CONST (338) 5
INTEGER_CONST (339) 6
CHAR_CONST (340) 7
IDENTIFIER (341) 13 20 45 60
STRING_LITERAL (342)
PREPROCESSOR_INCLUDE (343)
EOLINE (344)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
program (91)
    on left: 1 2 3 4, on right: 0 3 4
CONSTANT (92)
    on left: 5 6 7, on right: 23
declaration (93)
    on left: 8, on right: 2 4 91 92
initialization_list (94)
    on left: 9 10 11 12, on right: 8 11 12
bracketed_identifier (95)
    on left: 13 14, on right: 9 12 14 17 19 33 46 61 62
assignment_expression_list (96)
    on left: 15 16, on right: 16 68 69 70 71 72 73
equality_expression (97)
    on left: 17 18 19 20 21 22, on right: 22 68 69 71 74 76 77 82 83
    101
bracketed_const (98)
    on left: 23 24, on right: 18 24 47
COMPARISON_OPERATOR (99)
    on left: 25 26 27 28 29 30 31 32, on right: 17 21
assignment_expression (100)
    on left: 33, on right: 10 11 15 16 99
ASSIGNMENT_OPERATOR (101)
    on left: 34 35 36 37 38 39 40 41 42 43 44, on right: 33
arithmetic_expression (102)
    on left: 45 46 47 48 49, on right: 21 33 48 49
ARITHMETIC_OPERATOR (103)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 48
fn_declaration (104)
    on left: 60, on right: 1 3
fn_params_list (105)
    on left: 61 62 63, on right: 60 62
loop (106)
    on left: 64 65, on right: 95
for_loop (107)
    on left: 66 67, on right: 64
for_loop_decl_statement (108)
    on left: 68 69 70 71 72 73 74 75, on right: 66 67
while_loop (109)
    on left: 76 77, on right: 65
if_block_statement (110)
    on left: 78 79, on right: 96
else_statement_list (111)
    on left: 80 81, on right: 79 81
if_statement (112)
    on left: 82 83, on right: 78 79 84
else_statement (113)
    on left: 84 85 86, on right: 80 81
compound_statement (114)
    on left: 87 88 89 90, on right: 60 66 76 82 85
declaration_list (115)
    on left: 91 92, on right: 87 89 92
statement_list (116)
    on left: 93 94, on right: 87 88 94
statement (117)
    on left: 95 96 97, on right: 67 77 83 86 93 94
semi_colon_statement (118)
    on left: 98 99 100, on right: 97
return_statement (119)
    on left: 101 102, on right: 98


State 0

    0 $accept: . program $end

    INT  shift, and go to state 1

    program         go to state 2
    declaration     go to state 3
    fn_declaration  go to state 4


State 1

    8 declaration: INT . initialization_list SEMI_COLON
   60 fn_declaration: INT . IDENTIFIER LBRACKET fn_params_list RBRACKET compound_statement

    LBRACKET    shift, and go to state 5
    IDENTIFIER  shift, and go to state 6

    initialization_list    go to state 7
    bracketed_identifier   go to state 8
    assignment_expression  go to state 9


State 2

    0 $accept: program . $end
    3 program: program . fn_declaration
    4        | program . declaration

    $end  shift, and go to state 10
    INT   shift, and go to state 1

    declaration     go to state 11
    fn_declaration  go to state 12


State 3

    2 program: declaration .

    $default  reduce using rule 2 (program)


State 4

    1 program: fn_declaration .

    $default  reduce using rule 1 (program)


State 5

   14 bracketed_identifier: LBRACKET . bracketed_identifier RBRACKET

    LBRACKET    shift, and go to state 5
    IDENTIFIER  shift, and go to state 13

    bracketed_identifier  go to state 14


State 6

   13 bracketed_identifier: IDENTIFIER .
   60 fn_declaration: INT IDENTIFIER . LBRACKET fn_params_list RBRACKET compound_statement

    LBRACKET  shift, and go to state 15

    $default  reduce using rule 13 (bracketed_identifier)


State 7

    8 declaration: INT initialization_list . SEMI_COLON
   11 initialization_list: initialization_list . COMMA assignment_expression
   12                    | initialization_list . COMMA bracketed_identifier

    COMMA       shift, and go to state 16
    SEMI_COLON  shift, and go to state 17


State 8

    9 initialization_list: bracketed_identifier .
   33 assignment_expression: bracketed_identifier . ASSIGNMENT_OPERATOR arithmetic_expression

    MULT_EQUALS     shift, and go to state 18
    DIV_EQUALS      shift, and go to state 19
    PERCENT_EQUALS  shift, and go to state 20
    PLUS_EQUALS     shift, and go to state 21
    MINUS_EQUALS    shift, and go to state 22
    LSHIFT_EQUALS   shift, and go to state 23
    RSHIFT_EQUALS   shift, and go to state 24
    AND_EQUALS      shift, and go to state 25
    XOR_EQUALS      shift, and go to state 26
    OR_EQUALS       shift, and go to state 27
    EQUALS          shift, and go to state 28

    $default  reduce using rule 9 (initialization_list)

    ASSIGNMENT_OPERATOR  go to state 29


State 9

   10 initialization_list: assignment_expression .

    $default  reduce using rule 10 (initialization_list)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    4 program: program declaration .

    $default  reduce using rule 4 (program)


State 12

    3 program: program fn_declaration .

    $default  reduce using rule 3 (program)


State 13

   13 bracketed_identifier: IDENTIFIER .

    $default  reduce using rule 13 (bracketed_identifier)


State 14

   14 bracketed_identifier: LBRACKET bracketed_identifier . RBRACKET

    RBRACKET  shift, and go to state 30


State 15

   60 fn_declaration: INT IDENTIFIER LBRACKET . fn_params_list RBRACKET compound_statement

    INT  shift, and go to state 31

    $default  reduce using rule 63 (fn_params_list)

    fn_params_list  go to state 32


State 16

   11 initialization_list: initialization_list COMMA . assignment_expression
   12                    | initialization_list COMMA . bracketed_identifier

    LBRACKET    shift, and go to state 5
    IDENTIFIER  shift, and go to state 13

    bracketed_identifier   go to state 33
    assignment_expression  go to state 34


State 17

    8 declaration: INT initialization_list SEMI_COLON .

    $default  reduce using rule 8 (declaration)


State 18

   35 ASSIGNMENT_OPERATOR: MULT_EQUALS .

    $default  reduce using rule 35 (ASSIGNMENT_OPERATOR)


State 19

   36 ASSIGNMENT_OPERATOR: DIV_EQUALS .

    $default  reduce using rule 36 (ASSIGNMENT_OPERATOR)


State 20

   37 ASSIGNMENT_OPERATOR: PERCENT_EQUALS .

    $default  reduce using rule 37 (ASSIGNMENT_OPERATOR)


State 21

   38 ASSIGNMENT_OPERATOR: PLUS_EQUALS .

    $default  reduce using rule 38 (ASSIGNMENT_OPERATOR)


State 22

   39 ASSIGNMENT_OPERATOR: MINUS_EQUALS .

    $default  reduce using rule 39 (ASSIGNMENT_OPERATOR)


State 23

   40 ASSIGNMENT_OPERATOR: LSHIFT_EQUALS .

    $default  reduce using rule 40 (ASSIGNMENT_OPERATOR)


State 24

   41 ASSIGNMENT_OPERATOR: RSHIFT_EQUALS .

    $default  reduce using rule 41 (ASSIGNMENT_OPERATOR)


State 25

   42 ASSIGNMENT_OPERATOR: AND_EQUALS .

    $default  reduce using rule 42 (ASSIGNMENT_OPERATOR)


State 26

   43 ASSIGNMENT_OPERATOR: XOR_EQUALS .

    $default  reduce using rule 43 (ASSIGNMENT_OPERATOR)


State 27

   44 ASSIGNMENT_OPERATOR: OR_EQUALS .

    $default  reduce using rule 44 (ASSIGNMENT_OPERATOR)


State 28

   34 ASSIGNMENT_OPERATOR: EQUALS .

    $default  reduce using rule 34 (ASSIGNMENT_OPERATOR)


State 29

   33 assignment_expression: bracketed_identifier ASSIGNMENT_OPERATOR . arithmetic_expression

    LBRACKET        shift, and go to state 35
    FLOATING_CONST  shift, and go to state 36
    INTEGER_CONST   shift, and go to state 37
    CHAR_CONST      shift, and go to state 38
    IDENTIFIER      shift, and go to state 39

    CONSTANT               go to state 40
    bracketed_identifier   go to state 41
    bracketed_const        go to state 42
    arithmetic_expression  go to state 43


State 30

   14 bracketed_identifier: LBRACKET bracketed_identifier RBRACKET .

    $default  reduce using rule 14 (bracketed_identifier)


State 31

   61 fn_params_list: INT . bracketed_identifier

    LBRACKET    shift, and go to state 5
    IDENTIFIER  shift, and go to state 13

    bracketed_identifier  go to state 44


State 32

   60 fn_declaration: INT IDENTIFIER LBRACKET fn_params_list . RBRACKET compound_statement
   62 fn_params_list: fn_params_list . COMMA INT bracketed_identifier

    RBRACKET  shift, and go to state 45
    COMMA     shift, and go to state 46


State 33

   12 initialization_list: initialization_list COMMA bracketed_identifier .
   33 assignment_expression: bracketed_identifier . ASSIGNMENT_OPERATOR arithmetic_expression

    MULT_EQUALS     shift, and go to state 18
    DIV_EQUALS      shift, and go to state 19
    PERCENT_EQUALS  shift, and go to state 20
    PLUS_EQUALS     shift, and go to state 21
    MINUS_EQUALS    shift, and go to state 22
    LSHIFT_EQUALS   shift, and go to state 23
    RSHIFT_EQUALS   shift, and go to state 24
    AND_EQUALS      shift, and go to state 25
    XOR_EQUALS      shift, and go to state 26
    OR_EQUALS       shift, and go to state 27
    EQUALS          shift, and go to state 28

    $default  reduce using rule 12 (initialization_list)

    ASSIGNMENT_OPERATOR  go to state 29


State 34

   11 initialization_list: initialization_list COMMA assignment_expression .

    $default  reduce using rule 11 (initialization_list)


State 35

   14 bracketed_identifier: LBRACKET . bracketed_identifier RBRACKET
   24 bracketed_const: LBRACKET . bracketed_const RBRACKET
   49 arithmetic_expression: LBRACKET . arithmetic_expression RBRACKET

    LBRACKET        shift, and go to state 35
    FLOATING_CONST  shift, and go to state 36
    INTEGER_CONST   shift, and go to state 37
    CHAR_CONST      shift, and go to state 38
    IDENTIFIER      shift, and go to state 39

    CONSTANT               go to state 40
    bracketed_identifier   go to state 47
    bracketed_const        go to state 48
    arithmetic_expression  go to state 49


State 36

    5 CONSTANT: FLOATING_CONST .

    $default  reduce using rule 5 (CONSTANT)


State 37

    6 CONSTANT: INTEGER_CONST .

    $default  reduce using rule 6 (CONSTANT)


State 38

    7 CONSTANT: CHAR_CONST .

    $default  reduce using rule 7 (CONSTANT)


State 39

   13 bracketed_identifier: IDENTIFIER .
   45 arithmetic_expression: IDENTIFIER .

    RBRACKET            reduce using rule 13 (bracketed_identifier)
    RBRACKET            [reduce using rule 45 (arithmetic_expression)]
    LSHIFT              reduce using rule 13 (bracketed_identifier)
    LSHIFT              [reduce using rule 45 (arithmetic_expression)]
    RSHIFT              reduce using rule 13 (bracketed_identifier)
    RSHIFT              [reduce using rule 45 (arithmetic_expression)]
    LESS_OR_EQUAL       reduce using rule 13 (bracketed_identifier)
    LESS_OR_EQUAL       [reduce using rule 45 (arithmetic_expression)]
    MORE_OR_EQUAL       reduce using rule 13 (bracketed_identifier)
    MORE_OR_EQUAL       [reduce using rule 45 (arithmetic_expression)]
    LOGICAL_EQUALITY    reduce using rule 13 (bracketed_identifier)
    LOGICAL_EQUALITY    [reduce using rule 45 (arithmetic_expression)]
    LOGICAL_INEQUALITY  reduce using rule 13 (bracketed_identifier)
    LOGICAL_INEQUALITY  [reduce using rule 45 (arithmetic_expression)]
    LOGICAL_AND         reduce using rule 13 (bracketed_identifier)
    LOGICAL_AND         [reduce using rule 45 (arithmetic_expression)]
    LOGICAL_OR          reduce using rule 13 (bracketed_identifier)
    LOGICAL_OR          [reduce using rule 45 (arithmetic_expression)]
    COMMA               reduce using rule 13 (bracketed_identifier)
    COMMA               [reduce using rule 45 (arithmetic_expression)]
    SEMI_COLON          reduce using rule 13 (bracketed_identifier)
    SEMI_COLON          [reduce using rule 45 (arithmetic_expression)]
    BITWISE_OR          reduce using rule 13 (bracketed_identifier)
    BITWISE_OR          [reduce using rule 45 (arithmetic_expression)]
    BITWISE_AND         reduce using rule 13 (bracketed_identifier)
    BITWISE_AND         [reduce using rule 45 (arithmetic_expression)]
    BITWISE_XOR         reduce using rule 13 (bracketed_identifier)
    BITWISE_XOR         [reduce using rule 45 (arithmetic_expression)]
    MULT                reduce using rule 13 (bracketed_identifier)
    MULT                [reduce using rule 45 (arithmetic_expression)]
    PLUS                reduce using rule 13 (bracketed_identifier)
    PLUS                [reduce using rule 45 (arithmetic_expression)]
    MINUS               reduce using rule 13 (bracketed_identifier)
    MINUS               [reduce using rule 45 (arithmetic_expression)]
    DIV                 reduce using rule 13 (bracketed_identifier)
    DIV                 [reduce using rule 45 (arithmetic_expression)]
    PERCENT             reduce using rule 13 (bracketed_identifier)
    PERCENT             [reduce using rule 45 (arithmetic_expression)]
    LOGICAL_MORE        reduce using rule 13 (bracketed_identifier)
    LOGICAL_MORE        [reduce using rule 45 (arithmetic_expression)]
    LOGICAL_LESS        reduce using rule 13 (bracketed_identifier)
    LOGICAL_LESS        [reduce using rule 45 (arithmetic_expression)]
    $default            reduce using rule 13 (bracketed_identifier)


State 40

   23 bracketed_const: CONSTANT .

    $default  reduce using rule 23 (bracketed_const)


State 41

   46 arithmetic_expression: bracketed_identifier .

    $default  reduce using rule 46 (arithmetic_expression)


State 42

   47 arithmetic_expression: bracketed_const .

    $default  reduce using rule 47 (arithmetic_expression)


State 43

   33 assignment_expression: bracketed_identifier ASSIGNMENT_OPERATOR arithmetic_expression .
   48 arithmetic_expression: arithmetic_expression . ARITHMETIC_OPERATOR arithmetic_expression

    LSHIFT       shift, and go to state 50
    RSHIFT       shift, and go to state 51
    BITWISE_OR   shift, and go to state 52
    BITWISE_AND  shift, and go to state 53
    BITWISE_XOR  shift, and go to state 54
    MULT         shift, and go to state 55
    PLUS         shift, and go to state 56
    MINUS        shift, and go to state 57
    DIV          shift, and go to state 58
    PERCENT      shift, and go to state 59

    $default  reduce using rule 33 (assignment_expression)

    ARITHMETIC_OPERATOR  go to state 60


State 44

   61 fn_params_list: INT bracketed_identifier .

    $default  reduce using rule 61 (fn_params_list)


State 45

   60 fn_declaration: INT IDENTIFIER LBRACKET fn_params_list RBRACKET . compound_statement

    LCURLY  shift, and go to state 61

    compound_statement  go to state 62


State 46

   62 fn_params_list: fn_params_list COMMA . INT bracketed_identifier

    INT  shift, and go to state 63


State 47

   14 bracketed_identifier: LBRACKET bracketed_identifier . RBRACKET
   46 arithmetic_expression: bracketed_identifier .

    RBRACKET  shift, and go to state 30

    RBRACKET  [reduce using rule 46 (arithmetic_expression)]
    $default  reduce using rule 46 (arithmetic_expression)


State 48

   24 bracketed_const: LBRACKET bracketed_const . RBRACKET
   47 arithmetic_expression: bracketed_const .

    RBRACKET  shift, and go to state 64

    RBRACKET  [reduce using rule 47 (arithmetic_expression)]
    $default  reduce using rule 47 (arithmetic_expression)


State 49

   48 arithmetic_expression: arithmetic_expression . ARITHMETIC_OPERATOR arithmetic_expression
   49                      | LBRACKET arithmetic_expression . RBRACKET

    RBRACKET     shift, and go to state 65
    LSHIFT       shift, and go to state 50
    RSHIFT       shift, and go to state 51
    BITWISE_OR   shift, and go to state 52
    BITWISE_AND  shift, and go to state 53
    BITWISE_XOR  shift, and go to state 54
    MULT         shift, and go to state 55
    PLUS         shift, and go to state 56
    MINUS        shift, and go to state 57
    DIV          shift, and go to state 58
    PERCENT      shift, and go to state 59

    ARITHMETIC_OPERATOR  go to state 60


State 50

   58 ARITHMETIC_OPERATOR: LSHIFT .

    $default  reduce using rule 58 (ARITHMETIC_OPERATOR)


State 51

   59 ARITHMETIC_OPERATOR: RSHIFT .

    $default  reduce using rule 59 (ARITHMETIC_OPERATOR)


State 52

   51 ARITHMETIC_OPERATOR: BITWISE_OR .

    $default  reduce using rule 51 (ARITHMETIC_OPERATOR)


State 53

   52 ARITHMETIC_OPERATOR: BITWISE_AND .

    $default  reduce using rule 52 (ARITHMETIC_OPERATOR)


State 54

   50 ARITHMETIC_OPERATOR: BITWISE_XOR .

    $default  reduce using rule 50 (ARITHMETIC_OPERATOR)


State 55

   53 ARITHMETIC_OPERATOR: MULT .

    $default  reduce using rule 53 (ARITHMETIC_OPERATOR)


State 56

   54 ARITHMETIC_OPERATOR: PLUS .

    $default  reduce using rule 54 (ARITHMETIC_OPERATOR)


State 57

   55 ARITHMETIC_OPERATOR: MINUS .

    $default  reduce using rule 55 (ARITHMETIC_OPERATOR)


State 58

   56 ARITHMETIC_OPERATOR: DIV .

    $default  reduce using rule 56 (ARITHMETIC_OPERATOR)


State 59

   57 ARITHMETIC_OPERATOR: PERCENT .

    $default  reduce using rule 57 (ARITHMETIC_OPERATOR)


State 60

   48 arithmetic_expression: arithmetic_expression ARITHMETIC_OPERATOR . arithmetic_expression

    LBRACKET        shift, and go to state 35
    FLOATING_CONST  shift, and go to state 36
    INTEGER_CONST   shift, and go to state 37
    CHAR_CONST      shift, and go to state 38
    IDENTIFIER      shift, and go to state 39

    CONSTANT               go to state 40
    bracketed_identifier   go to state 41
    bracketed_const        go to state 42
    arithmetic_expression  go to state 66


State 61

   87 compound_statement: LCURLY . declaration_list statement_list RCURLY
   88                   | LCURLY . statement_list RCURLY
   89                   | LCURLY . declaration_list RCURLY
   90                   | LCURLY . RCURLY

    INT         shift, and go to state 67
    RETURN      shift, and go to state 68
    FOR         shift, and go to state 69
    IF          shift, and go to state 70
    WHILE       shift, and go to state 71
    LBRACKET    shift, and go to state 5
    RCURLY      shift, and go to state 72
    SEMI_COLON  shift, and go to state 73
    IDENTIFIER  shift, and go to state 13

    declaration            go to state 74
    bracketed_identifier   go to state 75
    assignment_expression  go to state 76
    loop                   go to state 77
    for_loop               go to state 78
    while_loop             go to state 79
    if_block_statement     go to state 80
    if_statement           go to state 81
    declaration_list       go to state 82
    statement_list         go to state 83
    statement              go to state 84
    semi_colon_statement   go to state 85
    return_statement       go to state 86


State 62

   60 fn_declaration: INT IDENTIFIER LBRACKET fn_params_list RBRACKET compound_statement .

    $default  reduce using rule 60 (fn_declaration)


State 63

   62 fn_params_list: fn_params_list COMMA INT . bracketed_identifier

    LBRACKET    shift, and go to state 5
    IDENTIFIER  shift, and go to state 13

    bracketed_identifier  go to state 87


State 64

   24 bracketed_const: LBRACKET bracketed_const RBRACKET .

    $default  reduce using rule 24 (bracketed_const)


State 65

   49 arithmetic_expression: LBRACKET arithmetic_expression RBRACKET .

    $default  reduce using rule 49 (arithmetic_expression)


State 66

   48 arithmetic_expression: arithmetic_expression . ARITHMETIC_OPERATOR arithmetic_expression
   48                      | arithmetic_expression ARITHMETIC_OPERATOR arithmetic_expression .

    LSHIFT       shift, and go to state 50
    RSHIFT       shift, and go to state 51
    BITWISE_OR   shift, and go to state 52
    BITWISE_AND  shift, and go to state 53
    BITWISE_XOR  shift, and go to state 54
    MULT         shift, and go to state 55
    PLUS         shift, and go to state 56
    MINUS        shift, and go to state 57
    DIV          shift, and go to state 58
    PERCENT      shift, and go to state 59

    LSHIFT       [reduce using rule 48 (arithmetic_expression)]
    RSHIFT       [reduce using rule 48 (arithmetic_expression)]
    BITWISE_OR   [reduce using rule 48 (arithmetic_expression)]
    BITWISE_AND  [reduce using rule 48 (arithmetic_expression)]
    BITWISE_XOR  [reduce using rule 48 (arithmetic_expression)]
    MULT         [reduce using rule 48 (arithmetic_expression)]
    PLUS         [reduce using rule 48 (arithmetic_expression)]
    MINUS        [reduce using rule 48 (arithmetic_expression)]
    DIV          [reduce using rule 48 (arithmetic_expression)]
    PERCENT      [reduce using rule 48 (arithmetic_expression)]
    $default     reduce using rule 48 (arithmetic_expression)

    ARITHMETIC_OPERATOR  go to state 60


State 67

    8 declaration: INT . initialization_list SEMI_COLON

    LBRACKET    shift, and go to state 5
    IDENTIFIER  shift, and go to state 13

    initialization_list    go to state 7
    bracketed_identifier   go to state 8
    assignment_expression  go to state 9


State 68

  101 return_statement: RETURN . equality_expression SEMI_COLON
  102                 | RETURN . SEMI_COLON

    LBRACKET        shift, and go to state 88
    SEMI_COLON      shift, and go to state 89
    FLOATING_CONST  shift, and go to state 36
    INTEGER_CONST   shift, and go to state 37
    CHAR_CONST      shift, and go to state 38
    IDENTIFIER      shift, and go to state 90

    CONSTANT               go to state 40
    bracketed_identifier   go to state 91
    equality_expression    go to state 92
    bracketed_const        go to state 93
    arithmetic_expression  go to state 94


State 69

   66 for_loop: FOR . LBRACKET for_loop_decl_statement RBRACKET compound_statement
   67         | FOR . LBRACKET for_loop_decl_statement RBRACKET statement

    LBRACKET  shift, and go to state 95


State 70

   82 if_statement: IF . LBRACKET equality_expression RBRACKET compound_statement
   83             | IF . LBRACKET equality_expression RBRACKET statement

    LBRACKET  shift, and go to state 96


State 71

   76 while_loop: WHILE . LBRACKET equality_expression RBRACKET compound_statement
   77           | WHILE . LBRACKET equality_expression RBRACKET statement

    LBRACKET  shift, and go to state 97


State 72

   90 compound_statement: LCURLY RCURLY .

    $default  reduce using rule 90 (compound_statement)


State 73

  100 semi_colon_statement: SEMI_COLON .

    $default  reduce using rule 100 (semi_colon_statement)


State 74

   91 declaration_list: declaration .

    $default  reduce using rule 91 (declaration_list)


State 75

   33 assignment_expression: bracketed_identifier . ASSIGNMENT_OPERATOR arithmetic_expression

    MULT_EQUALS     shift, and go to state 18
    DIV_EQUALS      shift, and go to state 19
    PERCENT_EQUALS  shift, and go to state 20
    PLUS_EQUALS     shift, and go to state 21
    MINUS_EQUALS    shift, and go to state 22
    LSHIFT_EQUALS   shift, and go to state 23
    RSHIFT_EQUALS   shift, and go to state 24
    AND_EQUALS      shift, and go to state 25
    XOR_EQUALS      shift, and go to state 26
    OR_EQUALS       shift, and go to state 27
    EQUALS          shift, and go to state 28

    ASSIGNMENT_OPERATOR  go to state 29


State 76

   99 semi_colon_statement: assignment_expression . SEMI_COLON

    SEMI_COLON  shift, and go to state 98


State 77

   95 statement: loop .

    $default  reduce using rule 95 (statement)


State 78

   64 loop: for_loop .

    $default  reduce using rule 64 (loop)


State 79

   65 loop: while_loop .

    $default  reduce using rule 65 (loop)


State 80

   96 statement: if_block_statement .

    $default  reduce using rule 96 (statement)


State 81

   78 if_block_statement: if_statement .
   79                   | if_statement . else_statement_list

    ELSE  shift, and go to state 99

    ELSE      [reduce using rule 78 (if_block_statement)]
    $default  reduce using rule 78 (if_block_statement)

    else_statement_list  go to state 100
    else_statement       go to state 101


State 82

   87 compound_statement: LCURLY declaration_list . statement_list RCURLY
   89                   | LCURLY declaration_list . RCURLY
   92 declaration_list: declaration_list . declaration

    INT         shift, and go to state 67
    RETURN      shift, and go to state 68
    FOR         shift, and go to state 69
    IF          shift, and go to state 70
    WHILE       shift, and go to state 71
    LBRACKET    shift, and go to state 5
    RCURLY      shift, and go to state 102
    SEMI_COLON  shift, and go to state 73
    IDENTIFIER  shift, and go to state 13
